Project

General

Profile

Actions

Bug #39283

closed

rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all'

Added by Casey Bodley about 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite log trim
Backport:
luminous mimic nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

BucketTrimInstanceCR fetches the sync status of all peer zones in its zonegroup, and only trims up to the minimum of their markers. But if any of these peer zones do not sync_from the local zone, they won't have a sync status and report an empty marker. This prevents the local zone from trimming any of its bucket index logs.


Related issues 4 (0 open4 closed)

Related to rgw - Bug #39487: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing themResolvedCasey Bodley

Actions
Copied to rgw - Backport #39416: luminous: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all'RejectedActions
Copied to rgw - Backport #39417: nautilus: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all'ResolvedAshish SinghActions
Copied to rgw - Backport #39418: mimic: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all'RejectedActions
Actions #1

Updated by Casey Bodley about 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 27567
Actions #2

Updated by Casey Bodley about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39416: luminous: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all' added
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39417: nautilus: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all' added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39418: mimic: rgw multisite: bucket index logs do not get trimmed unless zones 'sync_from_all' added
Actions #6

Updated by Casey Bodley almost 5 years ago

  • Related to Bug #39487: rgw multisite: datalogs/bilogs are not trimmed if no peer zones are processing them added
Actions #7

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF