rgw: multisite log trimming only checks peers that sync from us

if there are peer zones in our zonegroup that do not sync from us, they
won't have any sync status that corresponds to our logs. fetching their
status will give us empty markers, so we'll never make progress with log
trimming

the get_zone_data_notify_to_map() contains only the zones that are
configured to sync from us, so use that instead of get_zone_conn_map()

Fixes: http://tracker.ceph.com/issues/39283

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 3d52f30e6e11ccc22bce86c8c1e1054c6fdb97a6)

Conflicts:
    src/rgw/rgw_data_sync.cc
    src/rgw/rgw_sync_log_trim.cc
        Edited the two files to be compatible to mimic.