src/rgw/rgw_data_sync.cc
@@ -3530,7 +3530,7 @@ class DataLogTrimCR : public RGWCoroutine {
     : RGWCoroutine(store->ctx()), store(store), http(http),
       num_shards(num_shards),
       zone_id(store->get_zone().id),
-      peer_status(store->zone_conn_map.size()),
+      peer_status(store->get_zone_data_notify_to_map().size()),
       min_shard_markers(num_shards),
       last_trim(last_trim)
   {}
@@ -3553,7 +3553,7 @@ int DataLogTrimCR::operate()
       };
 
       auto p = peer_status.begin();
-      for (auto& c : store->zone_conn_map) {
+      for (auto& c : store->get_zone_data_notify_to_map()) {
         ldout(cct, 20) << "query sync status from " << c.first << dendl;
         using StatusCR = RGWReadRESTResourceCR<rgw_data_sync_status>;
         spawn(new StatusCR(cct, c.second, http, "/admin/log/", params, &*p),
